# Valiance-Lang

./: .gitignore  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: grammar.ebnf  langdocs.md  language.md  outdated_overview.md  overview.md  problems with traditional array langs.md  specs.md  type inference algorithm.txt
docs/core-concepts/: effective shape.md  elements.md  elements.txt  objects.md  types.md  variables.md
docs/design-reasons/: no inverses.md
docs/examples/: Flatten.vlnc  GOL.vlnc  NamedDimensions.vlnc  TimeDifference.vlnc
docs/implementation-ideas/: opcodes.md  standard libraries.md
docs/implementation-plans/: overview.md
docs/specs/: elements.txt  grammar.txt  language.md  type system.md
examples/: factorial.vlnc  fibonacci.vlnc  fizzbuzz.vlnc  primecheck.vlnc  quadraticEquation.vlnc
examples/BinarySearch/: project.toml
messy-planning-docs/specs/: language.md
new-docs/: grammar.txt  overview as code.vlnc  overview.md
new-docs/discussions/: hash-keywords.md  indexed-generics.md  overload-matching.md
original concepts/new-docs/: grammar.txt  objects.md
tests/: test_lexer.py  test_pretty_printers.py
valiance/: build.sc  lexer.py  main.py  mill.bat  pyproject.toml  sample.vlnc
valiance/analyser/: Analyser.py  Symbol.py  TypedAST.py
valiance/analysis/: Analyser.py  Branch.py  Scope.py  ScopeController.py  StackState.py
valiance/bytecode/: chunk.py  interpreter.py  ops.py  stackobject.py  utils.py
valiance/common/: Op.py  debug.scala
valiance/compiler_common/: Index.py  (+6 more)
(+44 files in other folders)
