[project]
name = "valiance"
version = "0.1.0"
description = "The Valiance Programming Language"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["valiance"]

[project.scripts]
valiance = "valiance.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
